Sat Feb  6 20:44:24 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: check __int64_t and __int128_t for RUBY_DEFINT on
	  OS X.

Sat Feb  6 15:18:28 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_regex_casefold.rb: Added data-based testing for
	  String#downcase :fold.

	* enc/unicode.c: Fixed a range error (lowest non-ASCII character affected
	  by case operations is U+00B5, MICRO SIGN)

	* test/ruby/enc/test_case_mapping.rb: Explicit test for case folding of
	  MICRO SIGN to Greek mu.
	(with Kimihito Matsui)

Sat Feb  6 14:51:23 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_regex_casefold.rb: Tests for three case folding
	  primitives (mbc_case_fold, get_case_fold_codes_by_str,
	  apply_all_case_fold) in the various encodings. Currently only known
	  good encodings are tested to avoid test failures. For bug hunting,
	  start by adding more encodings with
	      generate_test_casefold encoding
	  (with Kimihito Matsui)

Sat Feb  6 14:37:16 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c, test/ruby/enc/test_case_mapping.rb: Implemented :fold
	  option for String#downcase by using case folding data from
	  regular expression engine, and added a few simple tests.
	  (with Kimihito Matsui)

Fri Feb  5 20:08:59 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_case_mapping.rb: added tests for :ascii option.
	  (with Kimihito Matsui)

Fri Feb  5 12:22:20 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* insns.def (opt_mult): Use int128_t for overflow detection.

	* bignum.c (rb_uint128t2big): added for opt_mult.

	* bignum.c (rb_uint128t2big): added for rb_uint128t2big..

	* configure.in: define int128_t, uint128_t and related MACROs.
	  Initially introduced by r41379 but reverted by r50749.

Thu Feb  4 21:05:17 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Activated :ascii flag for ASCII-only case conversion
	  (with Kimihito Matsui)
